src/components/Markdown/style.css
.markdown {
  line-height: 1.7rem;
  a {
    color: #007bff;
    text-decoration: none;
  }

  ul,
  ol {
    padding-left: 33px;

    li {
      line-height: 1.6rem;
    }
  }

  h2,
  h3,
  h4,
  h5,
  h6 {
    text-transform: uppercase;
    font-weight: bold;
    margin-top: 1.7rem;
    margin-bottom: 0.3rem;
  }

  table {
    width: 100%;

    font-size: smaller;
    border-collapse: collapse;
    font-family: Calibri, sans-serif;
    line-height: normal;

    thead th {
      padding: 10px 12px;
      text-align: left;
      font-weight: bold;
      text-transform: uppercase;
      border: 1px solid #6f6b6b;
      background-color: #041529;
    }

    tbody td {
      padding: 10px 12px;
      border: 1px solid #6f6b6b;
      vertical-align: middle;
    }

    tbody tr:nth-child(even) {
      background-color: #202327;
    }
  }

  code {
    color: #f8f9fa;
    background-color: #343a40;
    padding: 0 4px;
    border-radius: 4px;
    font-size: 80%;
    display: inline-block;
    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
      "Courier New", monospace;
  }
}

@media screen and (max-width: 576px) {
  .markdown {
    table {
      thead th {
        padding: 2px 4px;
      }

      tbody td {
        padding: 2px 4px;
      }
    }
  }
}

